--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.4.0
+  path_provider: ^2.0.14
+  url_launcher: ^6.1.10
+  
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +65,8 @@ flutter:
     - images/html.png
     - images/css-3.png
     - images/dart.png
+    - images/Resume.pdf
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
